--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ function loadXMLDoc() {
 </head> <body>
 
 <div id="myDiv"><h2>Test an AJAX call</h2></div>
-<button type="button" onclick="loadXMLDoc()">Change Content</button>
+<button type="button" onclick="loadXMLDoc()">Change Content !</button>
 
 </body>
 </html> 
