--- a/index.html
+++ b/index.html
@@ -1,45 +1,65 @@
 <!DOCTYPE html>
-<html>
-<head>
-<script>
-var logJsonResponse = function () {
-    // Note: The onreadystatechange event is triggered five times (0-4), one time for each change in readyState.
-    // Values can be: 0: request not initialized, 1: server connection established
-    //      2: request received, 3: processing request, 4: request finished and response is ready
-    if (this.readyState == 4) {
-        document.getElementById("myDiv").innerHTML
-            = 'Status: '+this.status+'<p>Headers: '+JSON.stringify(this.getAllResponseHeaders())+'<p>Body: '+this.responseText;
-    }
-};
+<!--[if IEMobile 7 ]>    <html class="no-js iem7"> <![endif]-->
+<!--[if (gt IEMobile 7)|!(IEMobile)]><!--> <html class="no-js"> <!--<![endif]-->
+    <head>
+        <meta charset="utf-8">
+        <title>First HTML5 App</title>
+        <meta name="description" content="">
+        <meta name="HandheldFriendly" content="True">
+        <meta name="MobileOptimized" content="320">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="cleartype" content="on">
 
-var logAnyResponse = function () {
-    if (this.readyState == 4) {
-        document.getElementById("myDiv").innerHTML
-            = 'Status: '+this.status+'<p>Headers: '+this.getAllResponseHeaders()+'<p>Body: '+this.responseText;
-    }
-};
-        
-function loadXMLDoc() {
-    var xmlhttp;
-    if (!window.XMLHttpRequest) {
-        alert('error');  // code for IE6, IE5 not needed, the user should update
-    } else {
-        var apiServer = "http://private-9f552e-lutcomp.apiary.io";
-//        var apiKey = "MDEzYTQ0MzU0";
-//        var topic = "82471/Taipei";
-        var xhr = new XMLHttpRequest();
-        xhr.open("GET", apiServer + "/lc-v1.0/projects/ghijkl");
-//        xhr.open("GET", "http://api.ookaboo.com/api1/lookup_picture?api_key=" + apiKey 
-//                + "&query_uri=http://ookaboo.com/o/pictures/topic/" + topic);
-        xhr.onreadystatechange = logJsonResponse;
-        xhr.send();
-    }
-};
-</script>
-</head> <body>
+        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/touch/apple-touch-icon-144x144-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/touch/apple-touch-icon-114x114-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/touch/apple-touch-icon-72x72-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" href="img/touch/apple-touch-icon-57x57-precomposed.png">
+        <link rel="shortcut icon" href="img/touch/apple-touch-icon.png">
 
-<div id="myDiv"><h2>Test an AJAX call</h2></div>
-<button type="button" onclick="loadXMLDoc()">Change Content !</button>
+        <!-- Tile icon for Win8 (144x144 + tile color) -->
+        <meta name="msapplication-TileImage" content="img/touch/apple-touch-icon-144x144-precomposed.png">
+        <meta name="msapplication-TileColor" content="#222222">
 
-</body>
-</html> 
+
+        <!-- For iOS web apps. Delete if not needed. https://github.com/h5bp/mobile-boilerplate/issues/94 -->
+        <!--
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black">
+        <meta name="apple-mobile-web-app-title" content="">
+        -->
+
+        <!-- This script prevents links from opening in Mobile Safari. https://gist.github.com/1042026 -->
+        <!--
+        <script>(function(a,b,c){if(c in b&&b[c]){var d,e=a.location,f=/^(a|html)$/i;a.addEventListener("click",function(a){d=a.target;while(!f.test(d.nodeName))d=d.parentNode;"href"in d&&(d.href.indexOf("http")||~d.href.indexOf(e.host))&&(a.preventDefault(),e.href=d.href)},!1)}})(document,window.navigator,"standalone")</script>
+        -->
+
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/main.css">
+        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+    </head>
+    <body>
+
+        <!-- Add your site or application content here -->
+
+		<h1>Homework #1: My First HTML5 App in the Cloud</h1>
+		<video controls preload=metadata poster='img/childplaying_poster.png'>
+			<source src='video/playingchild.webm' type='video/webm'>
+			<source src='video/playingchild.mp4' type='video/mp4'>
+			<source src='video/playingchild.ogg' type='video/ogg'>
+		</video>
+		<p>
+		Berlin Alexanderplatz in summer.
+		
+        <script src="js/vendor/zepto.min.js"></script>
+        <script src="js/helper.js"></script>
+
+        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID.
+        <script>
+            var _gaq=[["_setAccount","UA-XXXXX-X"],["_trackPageview"]];
+            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
+            g.src=("https:"==location.protocol?"//ssl":"//www")+".google-analytics.com/ga.js";
+            s.parentNode.insertBefore(g,s)}(document,"script"));
+        </script>
+		-->
+    </body>
+</html>
